updating main content section

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     -->
     <title>DataFlock</title>
   </head>
-  <body style="background-color:#e5e5d8">
+  <body style="background-color:#666666">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
